baml_language/crates/baml_tests/snapshots/__baml_std__/baml_tests____baml_std____03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===

=== HIR2 (package baml) ===

--- <builtin>/baml/containers.baml ---
class baml.Array {
}
class baml.Map {
}
function baml.at(self: ?, index: int) -> baml.T?  [builtin]
function baml.concat(self: ?, other: baml.T[]) -> baml.T[]  [builtin]
function baml.get(self: ?, key: baml.K) -> baml.V?  [builtin]
function baml.has(self: ?, key: baml.K) -> bool  [builtin]
function baml.join(self: ?, separator: string) -> string  [builtin]
function baml.keys(self: ?) -> baml.K[]  [builtin]
function baml.length(self: ?) -> int  [builtin]
function baml.length(self: ?) -> int  [builtin]
function baml.pop(self: ?) -> baml.T?  [builtin]
function baml.push(self: ?, item: baml.T) -> int  [builtin]
function baml.reverse(self: ?) -> baml.T[]  [builtin]
function baml.set(self: ?, key: baml.K, value: baml.V) -> null  [builtin]
function baml.slice(self: ?, start: int, end: int) -> baml.T[]  [builtin]
function baml.values(self: ?) -> baml.V[]  [builtin]

--- <builtin>/baml/core.baml ---
function baml.deep_copy(value: baml.T) -> baml.T  [builtin]
function baml.deep_equals(a: baml.T, b: baml.T) -> bool  [builtin]

--- <builtin>/baml/env/env.baml ---
function baml.env.get(key: string) -> string?  [builtin]
function baml.env.get_or_panic(key: string) -> string  [expr] {
  { let val = get(key) } if (val Eq null) { root.sys.panic("env var not found: " Add key) } "" else {  } val
}

--- <builtin>/baml/errors/errors.baml ---
class baml.errors.AccessError {
  message: string
}
class baml.errors.DevOther {
  message: string
}
class baml.errors.HostPanic {
  message: string
}
class baml.errors.InvalidArgument {
  message: string
}
class baml.errors.Io {
  message: string
}
class baml.errors.LlmClient {
  message: string
}
class baml.errors.NotImplemented {
  message: string
}
class baml.errors.RenderPrompt {
  message: string
}
class baml.errors.Timeout {
  message: string
  duration_ms: int?
}
class baml.errors.Unsupported {
  message: string
}

--- <builtin>/baml/fs/fs.baml ---
class baml.fs.File {
  _handle: $rust_type
}
function baml.fs.close(self: ?) -> null  [builtin]
function baml.fs.open(path: string) -> baml.fs.File  [builtin]
function baml.fs.read(self: ?) -> string  [builtin]

--- <builtin>/baml/http/http.baml ---
class baml.http.Request {
  method: string
  url: string
  headers: map<string, string>
  body: string
}
class baml.http.Response {
  status_code: int
  headers: map<string, string>
  url: string
  _body: $rust_type
}
function baml.http.fetch(url: string) -> baml.http.Response  [builtin]
function baml.http.ok(self: ?) -> bool  [expr] {
  {  } self.status_code Ge 200 And self.status_code Lt 300
}
function baml.http.send(request: baml.http.Request) -> baml.http.Response  [builtin]
function baml.http.text(self: ?) -> string  [builtin]

--- <builtin>/baml/llm/llm.baml ---
class baml.llm.ExecutionContext {
  jinja_string: string
  args: map<string, unknown>
  function_name: string
}
class baml.llm.ExecutionResult {
  ok: bool
  value: unknown
}
class baml.llm.OrchestrationStep {
  primitive_client: baml.llm.PrimitiveClient
  delay_ms: int
}
class baml.llm.PlannerState {
  rr_client_names: string[]
}
function baml.llm.build_request(client: baml.llm.Client, function_name: string, args: map<string, unknown>) -> root.http.Request  [expr] {
  { let primitive_client = client.to_primitive_client(); let specialized_prompt = render_prompt(client, function_name, args) } primitive_client.build_request(specialized_prompt)
}
function baml.llm.call_llm_function(client: baml.llm.Client, function_name: string, args: map<string, unknown>) -> baml.llm.T  [expr] {
  { let jinja_string = get_jinja_template(function_name); let context = baml.llm.ExecutionContext { jinja_string: jinja_string, args: args, function_name: function_name }; let result: baml.llm.T = client.execute(context, 0) } result
}
function baml.llm.render_prompt(client: baml.llm.Client, function_name: string, args: map<string, unknown>) -> baml.llm.PromptAst  [expr] {
  { let jinja_string = get_jinja_template(function_name); let primitive_client = client.to_primitive_client(); let prompt = primitive_client.render_prompt(jinja_string, args) } primitive_client.specialize_prompt(prompt)
}
function baml.llm.rr_local_offset(self: ?, client_name: string) -> int  [expr] {
  { let offset = 0; for seen_name in self.rr_client_names {  } if (seen_name Eq client_name) { offset Add= 1 } } offset
}
function baml.llm.rr_pick_index(self: ?, client_name: string, counter: int, sub_client_count: int) -> int  [expr] {
  { let local_offset = self.rr_local_offset(client_name); self.rr_client_names.push(client_name) } counter Add local_offset Mod sub_client_count
}

--- <builtin>/baml/llm/llm_types.baml ---
class baml.llm.AnthropicOptions {
  anthropic_version: string | null
}
class baml.llm.AzureOpenAiOptions {
  resource_name: string | null
  deployment_id: string | null
  api_version: string
}
class baml.llm.BedrockOptions {
  region: string | null
  endpoint_url: string | null
  access_key_id: string | null
  secret_access_key: string | null
  session_token: string | null
  profile: string | null
  stop_sequences: string[] | null
}
class baml.llm.Client {
  name: string
  client_type: baml.llm.ClientType
  sub_clients: baml.llm.Client[]
  retry: baml.llm.RetryPolicy?
  counter: int
}
class baml.llm.PrimitiveClient {
  name: string
  provider: string
  options: baml.llm.PrimitiveClientOptions
}
class baml.llm.PrimitiveClientOptions {
  model: string | null
  max_tokens: int | null
  temperature: float | null
  top_p: float | null
  base_url: string | null
  default_role: string | null
  allowed_roles: string[] | null
  remap_roles: map<string, string> | null
  api_key: string | null
  provider_options: baml.llm.AnthropicOptions | baml.llm.AzureOpenAiOptions | baml.llm.BedrockOptions | null
  headers: map<string, string>
  query_params: map<string, string>
  request_body: map<string, unknown>
}
class baml.llm.PromptAst {
  _data: $rust_type
}
class baml.llm.RetryPolicy {
  max_retries: int
  initial_delay_ms: int
  multiplier: float
  max_delay_ms: int
}
enum baml.llm.ClientType {Primitive, Fallback, RoundRobin}
function baml.llm.build_attempt(self: ?) -> baml.llm.OrchestrationStep[]  [expr] {
  { let planner_state = PlannerState { rr_client_names: [] } } self.build_attempt_with_state(planner_state)
}
function baml.llm.build_attempt_with_state(self: ?, planner_state: baml.llm.PlannerState) -> baml.llm.OrchestrationStep[]  [expr] {
  {  } match (self.client_type) { baml.llm.ClientType.Primitive => { let resolve_fn = self.get_constructor(); let primitive = resolve_fn() } [OrchestrationStep { primitive_client: primitive, delay_ms: 0 }], baml.llm.ClientType.Fallback => { let steps: baml.llm.OrchestrationStep[] = []; for sub in self.sub_clients { for step in sub.build_plan_with_state(planner_state) {  } steps.push(step) } } steps, baml.llm.ClientType.RoundRobin => {  } if (self.sub_clients.length() Eq 0) {  } [] else { let idx = planner_state.rr_pick_index(self.name, self.counter, self.sub_clients.length()) } self.sub_clients[idx].build_plan_with_state(planner_state) }
}
function baml.llm.build_plan(self: ?) -> baml.llm.OrchestrationStep[]  [expr] {
  { let planner_state = PlannerState { rr_client_names: [] } } self.build_plan_with_state(planner_state)
}
function baml.llm.build_plan_with_state(self: ?, planner_state: baml.llm.PlannerState) -> baml.llm.OrchestrationStep[]  [expr] {
  {  } match (self.retry) { r: baml.llm.RetryPolicy => { let result: baml.llm.OrchestrationStep[] = []; let current_delay = r.initial_delay_ms Add 0.0; { let attempt = 0; while attempt Le r.max_retries { let delay = 0; if (attempt Gt 0) { delay = root.math.trunc(current_delay); let next = current_delay Mul r.multiplier } if (next Gt r.max_delay_ms Add 0.0) { current_delay = r.max_delay_ms Add 0.0 } else { current_delay = next }; let inner = self.build_attempt_with_state(planner_state); for step in inner { result.push(OrchestrationStep { primitive_client: step.primitive_client, delay_ms: delay }) } } } } result, null => self.build_attempt_with_state(planner_state) }
}
function baml.llm.build_request(self: ?, prompt: baml.llm.PromptAst) -> root.http.Request  [builtin]
function baml.llm.execute(self: ?, context: baml.llm.ExecutionContext, inherited_delay_ms: int) -> baml.llm.T  [expr] {
  {  } match (self.retry) { r: baml.llm.RetryPolicy => { let current_delay = r.initial_delay_ms Add 0.0; { let attempt = 0; while attempt Le r.max_retries { let attempt_delay = inherited_delay_ms; if (attempt Gt 0) { attempt_delay = root.math.trunc(current_delay); let next = current_delay Mul r.multiplier } if (next Gt r.max_delay_ms Add 0.0) { current_delay = r.max_delay_ms Add 0.0 } else { current_delay = next }; if (attempt Eq r.max_retries) { attempt_delay = inherited_delay_ms }; let result2: baml.llm.T = self.execute_once(context, attempt_delay) catch (e) { _ => { continue } }; return result2 } }; throw DevOther { message: "All orchestration..." } }, null => { let result: baml.llm.T = self.execute_once(context, inherited_delay_ms); return result } }
}
function baml.llm.execute_once(self: ?, context: baml.llm.ExecutionContext, active_delay_ms: int) -> baml.llm.T  [expr] {
  {  } match (self.client_type) { baml.llm.ClientType.Primitive => { let resolve_fn = self.get_constructor(); let primitive = resolve_fn(); let prompt = primitive.render_prompt(context.jinja_string, context.args); let specialized = primitive.specialize_prompt(prompt); let http_request = primitive.build_request(specialized); let http_response = root.http.send(http_request) } if (http_response.ok()) { let body = http_response.text(); let return_type = get_return_type(context.function_name); let result: baml.llm.T = primitive.parse(body, return_type) catch (e) { _ => { if (active_delay_ms Gt 0) {  } root.sys.sleep(active_delay_ms); throw e } } } result else { throw DevOther { message: "HTTP request failed" } }, baml.llm.ClientType.Fallback => { for sub in self.sub_clients { let result2: baml.llm.T = sub.execute(context, active_delay_ms) catch (e) { _ => { continue } }; return result2 }; throw DevOther { message: "All orchestration..." } }, baml.llm.ClientType.RoundRobin => { let idx = self.counter Mod self.sub_clients.length(); self.counter Add= 1; let result3: baml.llm.T = self.sub_clients[idx].execute(context, active_delay_ms); return result3 } }
}
function baml.llm.get_constructor(self: ?) -> () -> baml.llm.PrimitiveClient  [builtin]
function baml.llm.get_jinja_template(function_name: string) -> string  [builtin]
function baml.llm.get_return_type(function_name: string) -> type  [builtin]
function baml.llm.parse(self: ?, http_response_body: string, type_def: type) -> baml.llm.T  [builtin]
function baml.llm.render_prompt(self: ?, template: string, args: map<string, unknown>) -> baml.llm.PromptAst  [builtin]
function baml.llm.specialize_prompt(self: ?, prompt: baml.llm.PromptAst) -> baml.llm.PromptAst  [builtin]
function baml.llm.to_primitive_client(self: ?) -> baml.llm.PrimitiveClient  [expr] {
  {  } if (self.name.includes("/")) { throw InvalidArgument { message: "Invalid short han..." Add self.name } } else {  } self.get_constructor()()
}

--- <builtin>/baml/math/math.baml ---
function baml.math.trunc(value: float) -> int  [builtin]

--- <builtin>/baml/media/media.baml ---
class baml.media.Audio {
  _data: $rust_type
}
class baml.media.Image {
  _data: $rust_type
}
class baml.media.Pdf {
  _data: $rust_type
}
class baml.media.Video {
  _data: $rust_type
}
function baml.media.base64(self: ?) -> string  [builtin]
function baml.media.base64(self: ?) -> string  [builtin]
function baml.media.base64(self: ?) -> string  [builtin]
function baml.media.base64(self: ?) -> string  [builtin]
function baml.media.file(self: ?) -> string?  [builtin]
function baml.media.file(self: ?) -> string?  [builtin]
function baml.media.file(self: ?) -> string?  [builtin]
function baml.media.file(self: ?) -> string?  [builtin]
function baml.media.from_base64(base64: string, mime_type: string?) -> video  [builtin]
function baml.media.from_base64(base64: string, mime_type: string?) -> pdf  [builtin]
function baml.media.from_base64(base64: string, mime_type: string?) -> image  [builtin]
function baml.media.from_base64(base64: string, mime_type: string?) -> audio  [builtin]
function baml.media.from_file(file: string, mime_type: string?) -> video  [builtin]
function baml.media.from_file(file: string, mime_type: string?) -> pdf  [builtin]
function baml.media.from_file(file: string, mime_type: string?) -> image  [builtin]
function baml.media.from_file(file: string, mime_type: string?) -> audio  [builtin]
function baml.media.from_url(url: string, mime_type: string?) -> video  [builtin]
function baml.media.from_url(url: string, mime_type: string?) -> pdf  [builtin]
function baml.media.from_url(url: string, mime_type: string?) -> image  [builtin]
function baml.media.from_url(url: string, mime_type: string?) -> audio  [builtin]
function baml.media.mime_type(self: ?) -> string?  [builtin]
function baml.media.mime_type(self: ?) -> string?  [builtin]
function baml.media.mime_type(self: ?) -> string?  [builtin]
function baml.media.mime_type(self: ?) -> string?  [builtin]
function baml.media.url(self: ?) -> string?  [builtin]
function baml.media.url(self: ?) -> string?  [builtin]
function baml.media.url(self: ?) -> string?  [builtin]
function baml.media.url(self: ?) -> string?  [builtin]

--- <builtin>/baml/net/net.baml ---
class baml.net.Socket {
  _handle: $rust_type
}
function baml.net.close(self: ?) -> null  [builtin]
function baml.net.connect(addr: string) -> baml.net.Socket  [builtin]
function baml.net.read(self: ?) -> string  [builtin]

--- <builtin>/baml/string.baml ---
class baml.String {
}
function baml.charAt(self: ?, index: int) -> string  [builtin]
function baml.endsWith(self: ?, suffix: string) -> bool  [builtin]
function baml.includes(self: ?, search: string) -> bool  [builtin]
function baml.indexOf(self: ?, search: string) -> int  [builtin]
function baml.length(self: ?) -> int  [builtin]
function baml.matches(self: ?, pattern: string) -> bool  [builtin]
function baml.replace(self: ?, search: string, replacement: string) -> string  [builtin]
function baml.replaceAll(self: ?, search: string, replacement: string) -> string  [builtin]
function baml.split(self: ?, delimiter: string) -> string[]  [builtin]
function baml.startsWith(self: ?, prefix: string) -> bool  [builtin]
function baml.substring(self: ?, start: int, end: int) -> string  [builtin]
function baml.toLowerCase(self: ?) -> string  [builtin]
function baml.toUpperCase(self: ?) -> string  [builtin]
function baml.trim(self: ?) -> string  [builtin]

--- <builtin>/baml/sys/sys.baml ---
function baml.sys.panic(message: string) -> null  [builtin]
function baml.sys.shell(command: string) -> string  [builtin]
function baml.sys.sleep(ms: int) -> null  [builtin]

--- <builtin>/baml/unstable/unstable.baml ---
function baml.unstable.string(value: baml.unstable.T) -> string  [builtin]
